Replaced flex wrap implementation for Project Cards with Grid, fixing repository link layout issues on resize

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -245,18 +245,25 @@
 /* Features */
 
 	.features {
-		display: flex;
-		flex-wrap: wrap;
-		margin: 0 0 2em 0;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		margin: 1.5em 0 2em 0;
+		gap: 3em;
 	}
 
 		.features article { 
-			padding: 1.75em 1.75em 0.5em 1.75em; /*0.2em padding bottom*/
 			background-color: #353849;
 			border-radius: 5px;
-			margin: 1.5em 3em 1.5em 0;
-			width: calc(50% - 1.5em);
+			display: grid;
+			grid-template-rows: auto 1fr auto;
 		}
+			.features .card-text {
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+				padding: 1.75em 1.75em 0.5em 1.75em; /*0.2em padding bottom*/
+			}
+
 			.features .repo-link {
 				text-decoration: underline;
 				text-decoration-color: darkgrey;
@@ -267,18 +274,10 @@
 				text-shadow: 0 0 1px #ffffff;
 			}
 
-			.features article:nth-child(2n) {
-				margin-right: 0;
-			}
-
 			.features article .image {
 				border-radius: 5px 5px 0 0;
 				display: block;
-				margin-bottom: 1.75em;
-				margin-left: -1.75em;
-				margin-top: -1.75em;
-				position: relative;
-				width: calc(100% + 3.5em);
+				width: 100%;
 			}
 
 				.features article .image img {
@@ -288,41 +287,26 @@
 
 		@media screen and (max-width: 980px) {
 
-			.features article {
-				margin: 1em 2em 1em 0;
-				width: calc(50% - 1em);
+			.features {
+				gap: 2em;
 			}
 
 		}
 
 		@media screen and (max-width: 736px) {
 
-			.features article {
-				padding: 1.5em 1.5em 0.5em 1.5em ;
-				margin: 0.875em 1.75em 0.875em 0;
-				width: calc(50% - 0.875em - 1px);
+			.features {
+				gap: 1.5em;
 			}
-
-				.features article .image {
-					margin-bottom: 1.5em;
-					margin-left: -1.5em;
-					margin-top: -1.5em;
-					width: calc(100% + 3em);
-				}
 
 		}
 
-		@media screen and (max-width: 480px) {
+		@media screen and (max-width: 580px) {
 
 			.features {
-				display: block;
+				display: grid;
+				grid-template-columns: repeat(1, 1fr);
 			}
-
-				.features article {
-					width: 100%;
-					margin: 0 0 2em 0 !important;
-				}
-
 		}
 
 /* Menu */
