--- a/public/assets/css/tailwind2.css
+++ b/public/assets/css/tailwind2.css
@@ -533,16 +533,22 @@ input[type="submit"]:active,	input[type="button"]:active,	.button:active {
   background-color: rgba(255, 255, 255, 0.075);
 }
 .features {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 0 2em 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin: 1.5em 0 2em 0;
+  gap: 3em;
 }
 .features article {
-  padding: 1.75em 1.75em 0.5em 1.75em;
   background-color: #353849;
   border-radius: 5px;
-  margin: 1.5em 3em 1.5em 0;
-  width: calc(50% - 1.5em);
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+.features .card-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 1.75em 1.75em 0.5em 1.75em;
 }
 .features .repo-link {
   text-decoration: underline;
@@ -552,48 +558,29 @@ input[type="submit"]:active,	input[type="button"]:active,	.button:active {
 .features .repo-link:hover {
   text-shadow: 0 0 1px #ffffff;
 }
-.features article:nth-child(2n) {
-  margin-right: 0;
-}
 .features article .image {
   border-radius: 5px 5px 0 0;
   display: block;
-  margin-bottom: 1.75em;
-  margin-left: -1.75em;
-  margin-top: -1.75em;
-  position: relative;
-  width: calc(100% + 3.5em);
+  width: 100%;
 }
 .features article .image img {
   border-radius: 5px 5px 0 0;
   width: 100%;
 }
 @media screen and (max-width: 980px) {
-  .features article {
-    margin: 1em 2em 1em 0;
-    width: calc(50% - 1em);
+  .features {
+    gap: 2em;
   }
 }
 @media screen and (max-width: 736px) {
-  .features article {
-    padding: 1.5em 1.5em 0.5em 1.5em;
-    margin: 0.875em 1.75em 0.875em 0;
-    width: calc(50% - 0.875em - 1px);
-  }
-  .features article .image {
-    margin-bottom: 1.5em;
-    margin-left: -1.5em;
-    margin-top: -1.5em;
-    width: calc(100% + 3em);
+  .features {
+    gap: 1.5em;
   }
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 580px) {
   .features {
-    display: block;
-  }
-  .features article {
-    width: 100%;
-    margin: 0 0 2em 0 !important;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 .footer-icons {
